--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -511,7 +511,7 @@
         </div>
         <div class="col-md-3 mb-0">
             <mat-form-field class="example-full-width mb-0">
-                <mat-label>Too</mat-label>
+                <mat-label>To</mat-label>
                 <input matInput name="Too" type="number" [(ngModel)]="Category.Too" required #Toocontrol >
                 <mat-error>
                     Toois required
@@ -537,7 +537,7 @@
                         <th>SNo.</th>
                         <th>CategoryID</th>
                         <th>From</th>
-                        <th>Too</th>
+                        <th>To</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
