--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -1343,8 +1343,8 @@
             <th>ProductName</th>
             <th>Qty</th>
             <th>Barcode</th>
-            <th>RetailPrice</th>
-            <th>WholeSalePrice</th>
+            <th *ngIf="company.RetailPrice === 'true'">RetailPrice</th>
+            <th *ngIf="company.WholeSale === 'true'">WholeSalePrice</th>
           </tr>
         </thead>
         <tbody>
@@ -1353,15 +1353,15 @@
             <td>{{ s.ProductName }}</td>
             <td>{{ s.Count }}</td>
             <td>{{ s.Barcode }}</td>
-            <td *ngIf="!UpdatePriceEdit">{{ s.RetailPrice }}</td>
-            <td *ngIf="UpdatePriceEdit" style=" width:60px;text-align: center;">
+            <td *ngIf="!UpdatePriceEdit && company.RetailPrice === 'true'">{{ s.RetailPrice }}</td>
+            <td *ngIf="UpdatePriceEdit && company.RetailPrice === 'true'" style=" width:60px;text-align: center;">
                   <input style=" width:60px;text-align: center;" min="0"
                       type="number" [(ngModel)]="s.RetailPrice"
                        (ngModelChange)="s.RetailPrice = onChange($event)" (change)="updateTemp(s)"
                      #name="ngModel" [ngModelOptions]="{standalone: true}" name="s{{i}}">
              </td>
-            <td *ngIf="!UpdatePriceEdit">{{ s.WholeSalePrice }}</td>
-            <td *ngIf="UpdatePriceEdit" style=" width:60px;text-align: center;">
+            <td *ngIf="!UpdatePriceEdit && company.WholeSale === 'true'">{{ s.WholeSalePrice }}</td>
+            <td *ngIf="UpdatePriceEdit && company.WholeSale === 'true'" style=" width:60px;text-align: center;">
               <input style=" width:60px;text-align: center;" min="0"
                   type="number" [(ngModel)]="s.WholeSalePrice"
                    (ngModelChange)="s.WholeSalePrice = onChange($event)" (change)="updateTemp(s)"
