--- a/web1/src/app/report/ledge-report/ledge-report.component.html
+++ b/web1/src/app/report/ledge-report/ledge-report.component.html
@@ -131,21 +131,12 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                                        <mat-form-field class="example-full-width">
+                                        <mat-form-field class="example-full-width mb-0" >
                                             <mat-label>Supplier</mat-label>
-                                            <input type="text" placeholder="serach supplier" aria-label="Text"
-                                                matInput name="SupplierID" [formControl]="myControl"
-                                                [matAutocomplete]="auto1"
-                                                (input)="customerSearch(myControl.value, 'Name','Supplier')">
-                                            <mat-autocomplete autoActiveFirstOption1 #auto1="matAutocomplete">
-                                                <mat-option (click)="CustomerSelection('All','0')"
-                                                    value='All'>All</mat-option>
-                                                <mat-option (click)="CustomerSelection('Suppliers',option1.ID)"
-                                                    *ngFor="let option1 of filteredOptions"
-                                                    [value]="option1.Name">
-                                                    {{option1.Name}} {{option1.MobileNo1}}
+                                            <mat-select name="SupplierID" [(ngModel)]="supplier.SupplierID">
+                                                <mat-option [value]="sp.ID" *ngFor="let sp of supplierList"> {{sp.Name}}
                                                 </mat-option>
-                                            </mat-autocomplete>
+                                            </mat-select>
                                         </mat-form-field>
                                       </div>
                                     <!--  spec end -->
