--- a/web1/src/app/po/supplier-po/supplier-po.component.html
+++ b/web1/src/app/po/supplier-po/supplier-po.component.html
@@ -517,7 +517,7 @@
             </div>
             <div class="row">
                 <div class="col-9 ms-4">
-                    <button #closeAddModal class="modal-close-button"  aria-label="Close" class="btn btn-primary" type="button" data-dismiss="modal" (click)="unitPricePDF()">Report</button>
+                    <button #closeAddModal class="modal-close-button"  aria-label="Close" class="btn btn-primary" type="button" data-dismiss="modal" (click)="unitPricePDF()">Print</button>
                 </div>
             </div>
         </form>
