--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -543,7 +543,7 @@
                 <tbody class="text-center">
                     <tr *ngFor="let data of CategoryLists; let i = index" text="left">
                         <td>{{CategoryLists.length - i }}</td>
-                        <td>{{ data.CategoryID }}</td>
+                        <td>{{ data.Category }}</td>
                         <td>{{ data.Fromm }}</td>
                         <td>{{ data.Too }}</td>
                     </tr>
