--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -574,7 +574,7 @@
                             <td>{{data.CancelTransfer}}</td>
                             <td>{{data.AcceptTransfer}}</td>
                             <td>{{data.ClosingStock}}</td>
-                            <td>{{data.ShopID}}</td>
+                            <td>{{data.ShopName}}</td>
                           </tr>
 
                         </tbody>
@@ -592,7 +592,7 @@
                             <td>{{data.TotalCancelTransfer}}</td>
                             <td>{{data.TotalAcceptTransfer}}</td>
                             <td>{{data.ClosingStock}}</td>
-                            <td>{{data.ShopID}}</td>
+                            <td>{{data.ShopName}}</td>
                           </tr>
 
                         </tbody>
@@ -730,7 +730,7 @@
                             <td>{{Amt.AmtCancelTransfer}}</td>
                             <td>{{Amt.AmtAcceptTransfer}}</td>
                             <td>{{Amt.AmtClosingStock}}</td>
-                            <td>{{Amt.ShopID}}</td>
+                            <td>{{Amt.ShopName}}</td>
                           </tr>
                         </tbody>
                         <tbody *ngIf="FilterTypes1 == 'Month'" class="text-center">
@@ -747,7 +747,7 @@
                             <td>{{Amt.TotalCancelTransfer}}</td>
                             <td>{{Amt.TotalAcceptTransfer}}</td>
                             <td>{{Amt.AmtClosingStock}}</td>
-                            <td>{{Amt.ShopID}}</td>
+                            <td>{{Amt.ShopName}}</td>
                           </tr>
                         </tbody>
                       </table>
