--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -219,7 +219,7 @@
                           All Stock
                         </button>
                         <button class="me-2 ms-2" type="button" mat-raised-button color="warn" data-mdb-toggle="modal"
-                          data-mdb-target="#exampleModal" (click)="updatePurchasePriceModel(content3)">
+                          data-mdb-target="#exampleModal" (click)="updatePurchasePriceModel(content3)" >
                           Purchase Price
                         </button>
 
@@ -1380,7 +1380,7 @@
         </button>
       </div>
       <div class="col-1 ms-auto">
-        <button type="button" mat-raised-button color="primary" (click)="UpdatePrice()"> Update
+        <button type="button" mat-raised-button color="primary" (click)="UpdatePrice()" [disabled]="!this.UpdatePriceEdit" > Update
         </button>
       </div>
     </div>
