--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -16,9 +16,9 @@
                             <!-- togggle btn start -->
                             <div class="col-xl-1 col-lg-3 col-md-6 col-5 ms-auto">
                               
-                                <span *ngIf="company.WholeSale === 'true' || shop.WholesaleBill === 'true'" style="font-weight: 600;" class=" me-md-2 me-0 ps-0 me-0" >
+                                <span *ngIf="company.WholeSale === 'true' || shop[0].WholesaleBill === 'true'" style="font-weight: 600;" class=" me-md-2 me-0 ps-0 me-0" >
                                     <mat-slide-toggle  name="WholeSale" color="primary" [(ngModel)]="item.WholeSale"
-                                        class="example-margin" #Multiplecontrol>WholeSale</mat-slide-toggle>
+                                        class="example-margin" #Multiplecontrol [disabled]="disabledWholeSale">WholeSale</mat-slide-toggle>
                                 </span>
                                 <span style="font-weight: 600;" >
                                     <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="disableAddButtons"
@@ -312,7 +312,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0"
-                                    *ngIf="company.RetailPrice === 'true'">
+                                    *ngIf="company.RetailPrice === 'true' || shop[0].RetailBill === 'true'">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Retail Rate</mat-label>
                                         <input matInput name="RetailPrice" min="0" type="number"
@@ -324,7 +324,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0"
-                                    *ngIf="company.WholeSale === 'true' || shop.WholesaleBill === 'true' && item.WholeSale === 'true'">
+                                    *ngIf="(company.WholeSale === 'true' && shop[0].WholesaleBill === 'true') ||   this.item.WholeSale == true">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Wholesale Rate</mat-label>
                                         <input matInput name="WholeSalePrice" min="0" type="number"
